--- a/1.html
+++ b/1.html
@@ -1,10 +1,9 @@
  <pre>
-            Welcome to Read Mind – Your Gateway to Endless Knowledge!
-At Read Mind, we believe that books are the keys to wisdom, imagination, and growth. 
-Our mission is to make reading accessible and enjoyable for everyone, anytime and anywhere. 
-Whether you're a curious learner, a passionate reader, or someone seeking inspiration, 
-our vast collection of books across all genres is here to fuel your mind and heart.
-
-Join us on this journey of discovery, learning, and adventure. Happy Reading!
-
+            CREATE TABLE users (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    full_name VARCHAR(100) NOT NULL,
+    email VARCHAR(100) NOT NULL UNIQUE,
+    password VARCHAR(255) NOT NULL,
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+);
         </pre>
