--- a/1.html
+++ b/1.html
@@ -1,17 +1,6 @@
--- Create the database
-CREATE DATABASE IF NOT EXISTS login_system;
-USE login_system;
+USE reader;
 
--- Create the users table
-CREATE TABLE users (
-    id INT AUTO_INCREMENT PRIMARY KEY,
-    full_name VARCHAR(100) NOT NULL,
-    email VARCHAR(100) NOT NULL UNIQUE,
-    password VARCHAR(255) NOT NULL,
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-);
-
--- Create the books table with all required columns
+-- Create the books table (assuming users table already exists)
 CREATE TABLE books (
     id INT AUTO_INCREMENT PRIMARY KEY,
     user_id INT NOT NULL,
@@ -23,11 +12,7 @@ CREATE TABLE books (
     FOREIGN KEY (user_id) REFERENCES users(id)
 );
 
--- Insert sample data for testing
-INSERT INTO users (full_name, email, password, created_at) VALUES
-('John Doe', 'john@example.com', '$2y$10$YOUR_HASHED_PASSWORD', '2025-03-01 10:00:00'),
-('Jane Smith', 'jane@example.com', '$2y$10$YOUR_HASHED_PASSWORD', '2025-03-02 12:00:00');
-
+-- Insert sample books (adjust user_id to match existing users in reader)
 INSERT INTO books (user_id, book_name, file_path, uploaded_at, total_pages, pages_read) VALUES
 (1, 'Book One.pdf', 'uploads/Book One.pdf', '2025-03-10 14:00:00', 300, 150),
 (1, 'Book Two.epub', 'uploads/Book Two.epub', '2025-03-12 09:00:00', 250, 50),
