--- a/books.html
+++ b/books.html
@@ -13,6 +13,12 @@
         .dark .text-gray-600 { color: rgba(0, 0, 0, 0.514); }
         .book-progress::-webkit-progress-bar { background-color: #f3f4f6; border-radius: 9999px; }
         .book-progress::-webkit-progress-value { background-color: #10b981; border-radius: 9999px; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
+        th { background-color: #f4f4f4; }
+        tr:hover { background-color: #f9f9f9; }
+        .dark th { background-color: #555; }
+        .dark tr:hover { background-color: #666; }
     </style>
 </head>
 <body class="bg-primary min-h-screen">
@@ -25,7 +31,8 @@
             <div class="flex items-center space-x-8">
                 <a href="index.html" class="hover:text-gray-600">Home</a>
                 <a href="library.html" class="hover:text-gray-600">Library</a>
-                <a href="index.html#bookmarks" class="hover:text-gray-600">Bookmarks</a>
+                <a href="progress.html" class="hover:text-gray-600">Progress</a>
+                <a href="logout.php" class="hover:text-gray-600">Logout</a>
             </div>
         </nav>
     </header>
@@ -33,7 +40,6 @@
     <main class="container mx-auto px-4 pt-8">
         <div class="grid grid-cols-12 gap-8">
             <div class="col-span-8">
-           
                 <div class="bg-white rounded-lg p-8 shadow-lg mt-8">
                     <h2 class="text-2xl font-bold mb-4">Upload New Book</h2>
                     <div id="dropZone" class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center">
@@ -48,26 +54,82 @@
         </div>
              
         <div class="bg-white rounded-lg p-8 shadow-lg mt-8">
-            <h2 class="text-2xl font-bold mb-4">Uploaded Books</h2>
-            <ul id="uploadedBooks" class="space-y-2"></ul>
+            <h2 class="text-2xl font-bold mb-4">Your Books</h2>
+            <table id="booksTable">
+                <thead>
+                    <tr>
+                        <th>Book Name</th>
+                        <th>Uploaded At</th>
+                        <th>Progress</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="booksTableBody"></tbody>
+            </table>
         </div>
     </main>
 
     <script>
+        // Handle file upload
         document.getElementById('fileInput').addEventListener('change', (e) => {
             const file = e.target.files[0];
             if (file) {
                 document.getElementById('fileName').textContent = `Selected: ${file.name}`;
-                const uploadedList = document.getElementById('uploadedBooks');
-                const listItem = document.createElement('li');
-                listItem.classList.add('flex', 'justify-between', 'items-center', 'p-2', 'border', 'rounded');
-                listItem.innerHTML = `
-                    <span>${file.name}</span>
-                    <a href="upload.html?book=${encodeURIComponent(file.name)}" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">Read Now</a>
-                `;
-                uploadedList.appendChild(listItem);
+                const formData = new FormData();
+                formData.append('bookFile', file);
+
+                fetch('upload_book.php', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.message);
+                    if (data.status === 'success') {
+                        fetchBooks(); // Refresh the table after upload
+                    }
+                })
+                .catch(error => {
+                    console.error('Error uploading book:', error);
+                    alert('An error occurred while uploading the book.');
+                });
             }
         });
+
+        // Fetch and display books in the table
+        function fetchBooks() {
+            fetch('get_books.php')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status === 'success') {
+                        const tbody = document.getElementById('booksTableBody');
+                        tbody.innerHTML = ''; // Clear existing rows
+                        data.books.forEach(book => {
+                            const percentage = book.total_pages > 0 ? Math.round((book.pages_read / book.total_pages) * 100) : 0;
+                            const row = document.createElement('tr');
+                            row.innerHTML = `
+                                <td>${book.title}</td>
+                                <td>${new Date(book.start_date).toLocaleDateString()}</td>
+                                <td>${book.pages_read}/${book.total_pages} pages (${percentage}%)</td>
+                                <td>
+                                    <a href="upload.html?book=${encodeURIComponent(book.file_path)}" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">Read Now</a>
+                                </td>
+                            `;
+                            tbody.appendChild(row);
+                        });
+                    } else {
+                        alert(data.message);
+                        window.location.href = 'login.html'; // Redirect if not logged in
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching books:', error);
+                    alert('An error occurred while fetching books.');
+                });
+        }
+
+        // Load books when the page loads
+        window.addEventListener('load', fetchBooks);
     </script>
 </body>
 </html>
